Attempt to fix layout on safari 15

--- a/_sass/world/modules/_speaker_carousel.scss
+++ b/_sass/world/modules/_speaker_carousel.scss
@@ -28,7 +28,6 @@ carousel-component {
     display: flex;
     overflow: scroll;
     gap: var(--space-medium);
-    align-items: center;
     padding-bottom: var(--space-medium);
     scrollbar-width: none;
     scroll-snap-type: x mandatory;
